--- a/README
+++ b/README
@@ -7,3 +7,8 @@ Snapshot tools for linux deepin.
 * Quick start:
   Switch `src` directory to execute deepinScrot.py like below command:
       cd ./src && ./deepinScrot.py
+
+* This is a fork of https://github.com/linuxdeepin-packages/deepin-scrot
+* Features added:
+1. allow user to select filename on commandline through the -o option
+2. fixed the bug: regional screenshot includes the selection frame in the filnal image
