--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 Snapshot tools for linux deepin.
 
+
+# This is a fork of https://github.com/linuxdeepin-packages/deepin-scrot
+# Features added:
+1. allow user to select filename on commandline through the -o option
+2. fixed the bug: regional screenshot includes the selection frame in the filnal image
+
 * First generate mo files.
   Swith `deepin-scrot` directory to execute updateTranslate.sh like below:
       ./updateTranslate.sh
@@ -7,8 +13,3 @@ Snapshot tools for linux deepin.
 * Quick start:
   Switch `src` directory to execute deepinScrot.py like below command:
       cd ./src && ./deepinScrot.py
-
-* This is a fork of https://github.com/linuxdeepin-packages/deepin-scrot
-* Features added:
-1. allow user to select filename on commandline through the -o option
-2. fixed the bug: regional screenshot includes the selection frame in the filnal image
